Updated AUTHORS file for GSoC projects.

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -635,6 +635,16 @@ by DFG Priority program SPP1489)
 $\bullet$ Lina Kulakova --  factorisation for polynomials over $\F_p$ for large
 $p$ (Google Summer of Code 2012)
 
+$\bullet$ Abhinav Baid -- LLL implementation, Ogita, Rump, Oishi dot product,
+Villard algorithm for LLL certification, Schwarz-Rutishauser algorithms for GSO and QR-decomposition (Google Summer of Code 2014)
+
+$\bullet$ Curtis Bright -- Mentoring/planning of LLL implementation
+
+$\bullet$ Alex Best -- Hermite Normal Form implementation including the
+Pernet-Stein algorithm and Smith Normal Form implementation including the
+Iliopoulos and Kannen-Bachem algorithms. Numerous improvements to nullspace,
+rref and rank computations.
+
 $\bullet$ Thomas DuBuisson -- logical ops for fmpz module, patches to the build
 system
 
