Improve the AUTHORS and docs following last commit .

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -638,12 +638,13 @@ $p$ (Google Summer of Code 2012)
 $\bullet$ Abhinav Baid -- LLL implementation, Ogita, Rump, Oishi dot product,
 Villard algorithm for LLL certification, Schwarz-Rutishauser algorithms for GSO and QR-decomposition (Google Summer of Code 2014)
 
-$\bullet$ Curtis Bright -- Mentoring/planning of LLL implementation
+$\bullet$ Curtis Bright -- Mentoring/planning of LLL implementation, numerous 
+patches including 32 bit support
 
 $\bullet$ Alex Best -- Hermite Normal Form implementation including the
 Pernet-Stein algorithm and Smith Normal Form implementation including the
 Iliopoulos and Kannen-Bachem algorithms. Numerous improvements to nullspace,
-rref and rank computations.
+rref and rank computations (Google Summer of Code 2014)
 
 $\bullet$ Thomas DuBuisson -- logical ops for fmpz module, patches to the build
 system
@@ -651,8 +652,6 @@ system
 $\bullet$ Jean-Pierre Flori -- many build system patches and Sage integration
 
 $\bullet$ Frithjof Schulze -- some fmpz functions and various patches
-
-$\bullet$ Curtis Bright -- numerous patches including 32 bit support
 
 $\bullet$ Daniel Woodhouse -- Contributed an implementation of multivariate
 multiplication over $\Z/n\Z$ and used this to implement a fast ``saturation''
