--- a/AUTHORS
+++ b/AUTHORS
@@ -61,12 +61,13 @@ $\bullet$ Abhinav Baid -- LLL implementation, Ogita, Rump, Oishi dot product,
 Villard algorithm for LLL certification, Schwarz-Rutishauser algorithms for GSO
 and QR-decomposition (Google Summer of Code 2014)
 
-$\bullet$ Curtis Bright -- Mentoring/planning of LLL implementation
+$\bullet$ Curtis Bright -- Mentoring/planning of LLL implementation, numerous 
+patches including 32 bit support
  
 $\bullet$ Alex Best -- Hermite Normal Form implementation including the
 Pernet-Stein algorithm and Smith Normal Form implementation including the
 Iliopoulos and Kannen-Bachem algorithms. Numerous improvements to nullspace, 
-rref and rank computations.
+rref and rank computations (Google Summer of Code 2014)
 
 $\bullet$ Thomas DuBuisson -- logical ops for fmpz module, patches to the build
 system
@@ -74,8 +75,6 @@ system
 $\bullet$ Jean-Pierre Flori -- many build system patches and Sage integration
 
 $\bullet$ Frithjof Schulze -- some fmpz functions and various patches
-
-$\bullet$ Curtis Bright -- numerous patches including 32 bit support
 
 $\bullet$ Daniel Woodhouse -- Contributed an implementation of multivariate
 multiplication over $\Z/n\Z$ and used this to implement a fast ``saturation''
