--- a/AUTHORS
+++ b/AUTHORS
@@ -115,6 +115,10 @@ of matrices over $\mathbb{Z}$.
 $\bullet$ Dharak Kharod and Prabhdeep Singh Walia both independently 
 contributed matrix content.
 
+$\bullet$ Alena Sergeicheva contributed a patch to the build system for
+individual file testing and also contributed numerous matrix concatenation 
+functions.
+
 $\bullet$ Patches and bug reports have been made by Michael Abshoff, 
 Didier Deshommes, Craig Citro, Timothy Abbot, Carl Witty, Gonzalo Tornaria,
 Jaap Spies, Kiran Kedlaya, William Stein, Kate Minola, Didier Deshommes, Robert
