--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -696,6 +696,21 @@ $\bullet$ Dana Jacobsen -- test BPSW primality code up to $2^64$ against
 Feitma's tables and sped up and corrected \code{n_is_prime} and 
 \code{n_is_probabprime}.
 
+$\bullet$ Anubhav Srivastava contributed horizontal and vertical concatenation
+of matrices over $\mathbb{Z}$ and an implementation of the Bodrato matrix
+squaring algorithm.
+
+$\bullet$ Dharak Kharod and Prabhdeep Singh Walia both independently
+contributed matrix content.
+
+$\bullet$ Alena Sergeicheva contributed a patch to the build system for
+individual file testing and also contributed numerous matrix concatenation
+functions.
+
+$\bullet$ Kushagra Singh contributed fast cube root and nth root code for word
+sized integers, including magic number, Newton iteration, Kahan iteration and
+Chebyshev approximation code.
+
 $\bullet$ Patches and bug reports have been made by Michael Abshoff,
 Didier Deshommes, Craig Citro, Timothy Abbot, Carl Witty, Gonzalo Tornaria,
 Jaap Spies, Kiran Kedlaya, William Stein, Kate Minola, Didier Deshommes, Robert
