--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -711,6 +711,8 @@ $\bullet$ Kushagra Singh contributed fast cube root and nth root code for word
 sized integers, including magic number, Newton iteration, Kahan iteration and
 Chebyshev approximation code.
 
+$\bullet$ Andreas Enge help with a port to MIPS64.
+
 $\bullet$ Patches and bug reports have been made by Michael Abshoff,
 Didier Deshommes, Craig Citro, Timothy Abbot, Carl Witty, Gonzalo Tornaria,
 Jaap Spies, Kiran Kedlaya, William Stein, Kate Minola, Didier Deshommes, Robert
