Update authors and docs.

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -713,6 +713,8 @@ Chebyshev approximation code.
 
 $\bullet$ Andreas Enge help with a port to MIPS64.
 
+$\bullet$ Tommy Hofmann supplied some inline functions.
+
 $\bullet$ Patches and bug reports have been made by Michael Abshoff,
 Didier Deshommes, Craig Citro, Timothy Abbot, Carl Witty, Gonzalo Tornaria,
 Jaap Spies, Kiran Kedlaya, William Stein, Kate Minola, Didier Deshommes, Robert
