Updated AUTHORS and Contributors.

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -715,6 +715,9 @@ $\bullet$ Andreas Enge help with a port to MIPS64.
 
 $\bullet$ Tommy Hofmann supplied some inline functions.
 
+$\bullet$ Ashish Kedia contributed an implementation of the Paterson-Stockmeyer
+algorithm.
+
 $\bullet$ Patches and bug reports have been made by Michael Abshoff,
 Didier Deshommes, Craig Citro, Timothy Abbot, Carl Witty, Gonzalo Tornaria,
 Jaap Spies, Kiran Kedlaya, William Stein, Kate Minola, Didier Deshommes, Robert
