Add chapter on building under MSVC on Windows.

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -508,6 +508,12 @@ make -j4 check
 Note that on some systems, most notably MinGW, parallel make is
 supported but can be problematic.
 
+\chapter{Building FLINT with MSVC}
+
+Dr. Brian Gladman has kindly provided build solutions for MSVC on Windows.
+
+For instructions on building FLINT using MSVC, see the readme.txt file in the relevant directory of the FLINT source tree, e.g. build.vc12 for MSVC 2013.
+
 \chapter{FLINT extension modules}
 
 Numerous developers have been building libraries on top of FLINT,
