--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -698,9 +698,12 @@ $\bullet$ Peter Shrimpton -- Wrote code for a basic prime sieve,
 Pocklington-Lehmer, Lucas, Fibonacci, BSPW and $n-1$ primality tests and a
 Weiferich prime search. (Funded by the Nuffield Foundation)
 
-$\bullet$ Dana Jacobsen -- test BPSW primality code up to $2^64$ against 
-Feitma's tables and sped up and corrected \code{n_is_prime} and 
-\code{n_is_probabprime}.
+$\bullet$ Brian Gladman -- MSVC support
+
+$\bullet$ Dana Jacobsen -- test BPSW primality code up to $2^64$ against
+Feitma's tables and sped up and corrected \code{n_is_prime} and
+\code{n_is_probabprime}. Improvements to \code{n_nextprime} and
+\code{n_isprime}.
 
 $\bullet$ Anubhav Srivastava contributed horizontal and vertical concatenation
 of matrices over $\mathbb{Z}$ and an implementation of the Bodrato matrix
@@ -722,16 +725,17 @@ $\bullet$ Andreas Enge help with a port to MIPS64.
 $\bullet$ Tommy Hofmann supplied some inline functions.
 
 $\bullet$ Ashish Kedia contributed an implementation of the Paterson-Stockmeyer
-algorithm.
+algorithm
 
 $\bullet$ Patches and bug reports have been made by Michael Abshoff,
 Didier Deshommes, Craig Citro, Timothy Abbot, Carl Witty, Gonzalo Tornaria,
 Jaap Spies, Kiran Kedlaya, William Stein, Kate Minola, Didier Deshommes, Robert
 Bradshaw, Serge Torres, Dan Grayson, Martin Lee, Bob Smith, Antony Vennard,
-Fr\'{e}d\'{e}ric Chyzak, Julien Puydt, Michael Jacobson Jr.,
+Fr\'{e}d\'{e}ric Chyzak, Julien Puydt, Dana Jacobsen, Michael Jacobson Jr.,
 Mike Stillman, Jan Englehardt, Jean-Pierre Flori, Jeroen Demeyer, Shi Bai,
 Qingwen Guan, Frithjof Schulze, Robert Baillie, Oleksandr Motsak, Hans
-Schoenemann, Janko Boehm, Ahmed Soliman and others.
+Schoenemann, Janko Boehm, Ahmed Soliman, Francois Bissey, Anton Mellit, Daniel
+Roche, Denis Kryskov, Vladimir Glazachev, Daniel Fabian, Julien Ospald, mgkurtz, Max Goldfar and others.
 
 $\bullet$ In addition Michael Abshoff, William Stein and Robert Bradshaw have
 contributed to the build system of FLINT.
