--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -403,26 +403,29 @@ by FLINT by passing \code{CC=full_path_to_compiler}, etc., to
 FLINT's configure.
 
 \chapter{Building FLINT2 with Microsoft Visual Studio 2015}
--------------------------------------------------
+
+Dr. Brian Gladman has kindly provided the build scripts for building
+Flint with Microsoft Visual Studio.
 
 Building FLINT2 with Microsoft Visual Studio requires Visual
 Visual Studio 2015 Community (or higher version) and:
 \begin{itemize}
-\item a) an installed version of Python 3
-\item b) an installed version of Python Tools 
-         for Visual Studio (http://pytools.codeplex.com/)
+\item an installed version of Python 3
+\item an installed version of Python Tools 
+         for Visual Studio (\url{http://pytools.codeplex.com/})
 \end{itemize}
+
 Obtain FLINT2 either as a released distribution or clone it using
 GIT from:
-\begin{itemize}
-    git@github.com:BrianGladman/flint2.git
-\end{itemize}
+
+\indent \url{git@github.com:BrianGladman/flint2.git}
 
 FLINT2 depends on the MPIR, MPFR and PTHREADS libraries that have
 to be installed and built using Vissual Studio before FLINT2 can
 be built.  The application directories are assumed to be in the
 same root directory with the names and layouts:
    
+\begin{verbatim}
     mpir
        build.vc14
        lib
@@ -439,10 +442,11 @@ same root directory with the names and layouts:
        build.vc14
        lib
        dll
+\end{verbatim}
    
 where the build.vc14 directories hold the Visual Studio build
 files and the lib and dll directories hold the static and dynamic
-library outputs for each package.  To libraries on which FLINT2
+library outputs for each package.  Libraries on which FLINT2
 depends have to be built for the same configuration that will be 
 used to build FLINT2 before FLINT2 itself can be built:
 \begin{itemize}
@@ -455,6 +459,7 @@ where <a|b> shows the choices (a or b) that have to be made.
 Opening the solution file flint.sln in Visual Studio 2015 provides
 the following build projects:
 
+\begin{verbatim}
     dll_flint     - a Visual Studio build project for
                     FLINT2 as a Dynamic Link Library
     lib_flint     - a Visual Studio build project for
@@ -465,8 +470,9 @@ the following build projects:
                     tests (after they have been created)
     run_tests     - a Python program for running the FLINT2
                     tests (after they have been built)
+\end{verbatim}
 
-The projects lib_flint and dll_flint can be used immediately to
+The projects \code{lib_flint} and \code{dll_flint} can be used immediately to
 build FLINT2 as a Static and Dynamic Link Library respectively.
 Before building one or both of these, you need to select the
 architecture (Win32 or x64) and the build type (Release or Debug).
@@ -474,45 +480,47 @@ architecture (Win32 or x64) and the build type (Release or Debug).
 To run the FLINT2 tests, the necessary Visual Studiop build files
 have to be created.  If you have Python and Python Tools for
 Visual Studio (PTVS) installed, this is done by setting the 
-project flint_config (loaded into Visual Studio by the solution
+project \code{flint_config} (loaded into Visual Studio by the solution
 file flint.sln) as the start-up project and then running it.
 If you don't have PTVS installed but you do have Python, you
-can run flint_config.py directly without Visual Studio. 
+can run \code{flint_config.py} directly without Visual Studio. 
    
-By default flint_config creates only the FLINT2 tests and profiling.
+By default \code{flint_config} creates only the FLINT2 tests and profiling.
 But it can also recreate the Visual Studio 2015 build files for the
 FLINT2 DLL and Static Libraries by changing the defines at the
-start of flint_config.py: 
+start of \code{flint_config.py}: 
 
+\begin{verbatim}
     build_lib = False
     build_dll = False
     build_tests = True
     build_profiles = True
+\end{verbatim}
 
 Rebuilding the library build files in this way may be necessary
 if FLINT2 has been updated since it was first downloaded. 
       
-After the FLINT2 tests have been created using flint_config.py,
-they can then be built by setting build_tests.py as the start up
+After the FLINT2 tests have been created using \code{flint_config.py},
+they can then be built by setting \code{build_tests.py} as the start up
 project and then running it.
 
 There are also a number of Visual Studio solution files that
-provide an *alternative* way of building the FLINT2 tests and
+provide an \emph{alternative} way of building the FLINT2 tests and
 profiling.  However, their use is not recommended because each
-of the multiple solution files flint-tests<NN>.sln (where NN
+of the multiple solution files \code{flint-tests<NN>.sln} (where NN
 is a number) has to be loaded and built by Visual Studio (this
 approach is used because it takes Visual Studio too long to
 load the tests from a single solution file).
 
-Once the tests have been built, the Python project run_tests can
+Once the tests have been built, the Python project \code{run_tests} can
 be set as the start-up project and started to run all the tests 
-(or the file run_tests.py can be run outside Visual Studio).
+(or the file \code{run_tests.py} can be run outside Visual Studio).
    
 After building FLINT2, the libraries and the header files that 
 you need to use FLINT2 are placed in the directories:
 \begin{itemize}
-\item lib\<Win32|x64>\<Debug|Release>
-\item dll\<Win32|x64>\<Debug|Release>
+\item \code{lib\<Win32|x64>\<Debug|Release>}
+\item \code{dll\<Win32|x64>\<Debug|Release>}
 \end{itemize}
 
 depending on the version(s) that have been built.
@@ -622,12 +630,6 @@ make -j4 check
 
 Note that on some systems, most notably MinGW, parallel make is
 supported but can be problematic.
-
-\chapter{Building FLINT with MSVC}
-
-Dr. Brian Gladman has kindly provided build solutions for MSVC on Windows.
-
-For instructions on building FLINT using MSVC, see the readme.txt file in the relevant directory of the FLINT source tree, e.g. build.vc12 for MSVC 2013.
 
 \chapter{FLINT extension modules}
 
