--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -477,7 +477,7 @@ build FLINT2 as a Static and Dynamic Link Library respectively.
 Before building one or both of these, you need to select the
 architecture (Win32 or x64) and the build type (Release or Debug).
 
-To run the FLINT2 tests, the necessary Visual Studiop build files
+To run the FLINT2 tests, the necessary Visual Studio build files
 have to be created.  If you have Python and Python Tools for
 Visual Studio (PTVS) installed, this is done by setting the 
 project \code{flint_config} (loaded into Visual Studio by the solution
