--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -421,7 +421,7 @@ GIT from:
 \indent \url{git@github.com:BrianGladman/flint2.git}
 
 FLINT2 depends on the MPIR, MPFR and PTHREADS libraries that have
-to be installed and built using Vissual Studio before FLINT2 can
+to be installed and built using Visual Studio before FLINT2 can
 be built.  The application directories are assumed to be in the
 same root directory with the names and layouts:
    
