--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -407,7 +407,7 @@ FLINT's configure.
 Dr. Brian Gladman has kindly provided the build scripts for building
 Flint with Microsoft Visual Studio.
 
-Building FLINT2 with Microsoft Visual Studio requires Visual
+Building FLINT2 with Microsoft Visual Studio requires 
 Visual Studio 2015 Community (or higher version) and:
 \begin{itemize}
 \item an installed version of Python 3
