add more tests for unity_zp multiplication and jacobi sum computation; small documentation fixes

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -2156,7 +2156,7 @@ output variable.
 % APRCL primality test                                                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{aprcl: primality test for \code{fmpz_t}}
+\chapter{aprcl: primality test for \code{fmpz}}
 \epigraph{APR-CL primality test}{}
 
 \section{Introduction}
@@ -2176,7 +2176,6 @@ struct.
 We now describe the functions available in the \code{aprcl} module.
 
 \input{input/aprcl.tex}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Arithmetic functions                                                         %
