--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -2156,7 +2156,7 @@ output variable.
 % APRCL primality test                                                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{aprcl: primality test for \code{fmpz}}
+\chapter{aprcl: Primality test for \code{fmpz}}
 \epigraph{APR-CL primality test}{}
 
 \section{Introduction}
