add license to PDF

--- a/doc/latex/flint-manual.tex
+++ b/doc/latex/flint-manual.tex
@@ -304,6 +304,9 @@ in an appropriately named test file.  For example, the function
 \code{fmpz_poly_add} located in\\ \code{fmpz_poly/add.c} has test code in the
 file \code{fmpz_poly/test/t-add.c}.
 
+FLINT is distributed under the GNU Lesser General Public License (LGPL).
+There is a copy of the license included with this document.
+
 \chapter{Configuring FLINT}
 
 The easiest way to use FLINT is to build a shared library.  Simply download
@@ -3362,6 +3365,11 @@ in most situations one needs to write \code{typename T::something}. Similarly if
 alternative syntax when such an error is encountered.
 
 \input{input/genericxx.tex}
+
+\chapter{License}
+\begin{verbatim}
+\input{../../LICENSE}
+\end{verbatim}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % BACKMATTER                                                                  %
